--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@inertiajs/react": "^2.3.13",
         "@vitejs/plugin-react": "^5.1.3",
         "react": "^19.2.4",
-        "react-dom": "^19.2.4"
+        "react-dom": "^19.2.4",
+        "react-hot-toast": "^2.6.0"
     }
 }
